--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,15 @@
   <%= stylesheet_link_tag    "application" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+
+<script>
+
+jQuery(function($) {
+       pepperMask = new Mask();
+       pepperMask.autoDetect();
+    });
+</script>
+
 </head>
 <body>
   <div class="topbar">
