--- a/app/views/produtos/_form.html.erb
+++ b/app/views/produtos/_form.html.erb
@@ -79,19 +79,19 @@
           <div class="clearfix">    
    	     <%= f.label :valor_compra %>
 		<div class="input">
-	     <%= f.text_field :valor_compra, :alt => 'decimal', :value => @produto.valor_compra %>
+	     <%= f.text_field :valor_compra, :value => @produto.valor_compra %>
 	    </div>
       </div>
           <div class="clearfix">    
    	     <%= f.label :valor_venda %>
 		<div class="input">
-	     <%= f.text_field :valor_venda, :alt => 'decimal', :value => @produto.valor_venda %>
+	     <%= f.text_field :valor_venda, :value => @produto.valor_venda %>
 	    </div>
       </div>
           <div class="clearfix">    
    	     <%= f.label :valor_minimo %>
 		<div class="input">
-	     <%= f.text_field :valor_minimo, :alt => 'decimal', :value => @produto.valor_minimo, :readonly => true %>
+	     <%= f.text_field :valor_minimo, :value => @produto.valor_minimo, :readonly => true %>
 	    </div>
 
       </div>
@@ -169,8 +169,5 @@
 }
 
  $('#produto_descricao').focus();
- //$('#produto_valor_compra').setMask();
- //$('#produto_valor_venda').setMask();
- //$('#produto_valor_minimo').setMask();
 
 </script>
