--- a/app/views/vendas/index.html.erb
+++ b/app/views/vendas/index.html.erb
@@ -18,10 +18,11 @@
 <% if @vendas.size > 0  %>
  <table class="zebra-striped">
   <tr>
-    <th width="20%"><%= t('venda.cliente')%></th>
-    <th width="20%"><%= t('venda.vendedor')%></th>
-    <th width="20%"><%= t('venda.data')%></th>
-    <th width="20%"><%= t('venda.observacao')%></th>
+    <th width="16%"><%= t('venda.cliente')%></th>
+    <th width="16%"><%= t('venda.vendedor')%></th>
+    <th width="16%"><%= t('venda.data')%></th>
+    <th width="16%"><%= t('venda.total_comprado')%></th>
+    <th width="16%"><%= t('venda.observacao')%></th>
    	<th></th>
     <th></th>
     <th></th>
@@ -32,6 +33,7 @@
     <td style="color:#666"><%= venda.cliente.nome if venda.cliente %></td>
     <td style="color:#666"><%= venda.vendedor.nome if venda.vendedor %></td>
     <td style="color:#1E90FF"><%= I18n.l(venda.data) if venda.data %></td> 
+    <td style="color:#006400"><%= number_to_currency(venda.total_vendido) %></td>
     <td style="color:#666"><%= show_obs(venda.observacao) %></td>
     <td><%= link_to t('botao.detalhes'), venda %></td>
     <td><%= link_to t('botao.editar'), edit_venda_path(venda)%></td>
