--- a/app/views/vendas/_form.html.erb
+++ b/app/views/vendas/_form.html.erb
@@ -66,10 +66,10 @@
 				<% @venda.produtos.each_with_index do |produto,i| %>
 				  <tr id="linha<%= i %>"  class="calcula">
 					    <input type="hidden" name="venda[lista_produtos][<%= i %>][id]" value="<%= produto.id %>"/>
-				        <td style="padding:5px;color:#1E90FF;padding-left:20px;"><%= produto.codigo_interno %></td>
-					    <td style="padding:5px;color:#666"><%= produto.descricao %></td>
-						<td style="padding:5px;color:#666"><%= produto.marca.descricao %></td>
-				        <td class="valor_produto" title="<%= produto.valor_venda %>" style="padding:5px;color:#006400">
+				        <td style="color:#1E90FF;padding-left:20px;"><%= produto.codigo_interno %></td>
+					    <td style="color:#666"><%= produto.descricao %></td>
+						<td style="color:#666"><%= produto.marca.descricao %></td>
+				        <td class="valor_produto" title="<%= produto.valor_venda %>" style="color:#006400">
 				<%= number_to_currency(produto.valor_venda) %></td>
 						<td style="padding:5px;color:#006400">
 							<input class="valor_vendido"  type="text" style="width: 100px;" onblur="calculaTotal();" name="venda[lista_produtos][<%= i %>][valor_vendido]" value="<%= produto.valor_vendido %>"/>
@@ -78,16 +78,78 @@
 				  </tr>
 				 <% end %>
 				<tr id="linhatotal" > 
-	              <td style="padding:5px;" colspan="2">&nbsp;</td>
-				  <td style="padding:5px;"><b>TOTAL</b></td>
-	              <td style="padding:5px;color:#006400;"><%= number_to_currency(@venda.total_sugerido) %></td>
-				 <td style="padding:5px;color:#006400;"><%= number_to_currency(@venda.total_vendido) %></td>
-	              <td style="padding:5px;">&nbsp;</td>  
+	              <td colspan="2">&nbsp;</td>
+				  <td ><b>TOTAL</b></td>
+	              <td style="color:#006400;"><%= number_to_currency(@venda.total_sugerido) %></td>
+				 <td style="color:#006400;"><%= number_to_currency(@venda.total_vendido) %></td>
+	              <td >&nbsp;</td>  
 				</tr>
 				<input type="hidden" id="contador" name="contador" value="<%= @venda.produtos.size %>"/>
 			<% end %>	
 		</tbody>	
     </table>
+	<br><br>
+	<table class="zebra-striped" id="tableforma">
+	  <thead>
+		<tr>
+	        <th width="30%"><%= t('venda.forma_pagamento')%></th>
+		    <th width="20%"><%= t('venda.parcela')%></th>
+	        <th width="25%"><%= t('venda.valor')%></th>
+	        <th width="25%"><%= t('venda.data')%></th>
+		</tr>
+		</thead>
+		<tbody id="pag_body">
+		  <tr id="dinheiro">
+	        <td style="color:#1E90FF;padding-left:20px;">Dinheiro</td>
+		    <td style="color:#666;padding-left:20px;">1</td>
+			<td style="padding:5px;color:#666;padding-left:5px;">
+				<%= f.text_field :valor_dinheiro, :style => 'width: 100px;', :onblur => 'calculaPagamento();'  %>
+			</td>
+	        <td style="padding:5px;color:#666">&nbsp;</td>
+	  	  </tr>
+	  	 <tr id="duplicata">
+	        <td style="color:#1E90FF;padding-left:20px;">Duplicata</td>
+		    <td style="color:#666;padding-left:10px;">
+		<%= f.select :parcela_duplicata, options_for_select(['1','2','3','4','5','6'], @venda.parcela_duplicata), {}, { :class => 'short' }  %></td>
+			<td style="padding:5px;color:#666;padding-left:5px;">
+				<%= f.text_field :valor_duplicata, :style => 'width: 100px;', :onblur => 'calculaPagamento();'  %>
+			</td>
+	        <td style="padding:5px;color:#666">
+		<%= f.text_field :data_duplicata, :style => 'width: 100px;',:value => @venda.data_duplicata %>
+			</td>
+		  </tr>
+		<tr id="cartao">
+	        <td style="color:#1E90FF;padding-left:20px;">Cartão</td>
+		    <td style="color:#666;padding-left:10px;">
+		<%= f.select :parcela_cartao, options_for_select(['1','2','3','4','5','6'], @venda.parcela_cartao), {}, { :class => 'short' }  %></td>
+			<td style="padding:5px;color:#666;padding-left:5px;">
+				<%= f.text_field :valor_cartao, :style => 'width: 100px;', :onblur => 'calculaPagamento();'  %>
+			</td>
+	        <td style="padding:5px;color:#666">
+		<%= f.text_field :data_cartao, :style => 'width: 100px;',:value => @venda.data_cartao %>
+			</td>
+		  </tr>
+		<tr id="cheque">
+	        <td style="color:#1E90FF;padding-left:20px;">Cheque</td>
+		    <td style="color:#666;padding-left:10px;">
+		<%= f.select :parcela_cheque, options_for_select(['1','2','3','4','5','6'], @venda.parcela_cheque), {}, { :class => 'short' }  %></td>
+			<td style="padding:5px;color:#666;padding-left:5px;">
+				<%= f.text_field :valor_cheque, :style => 'width: 100px;', :onblur => 'calculaPagamento();'  %>
+			</td>
+	        <td style="padding:5px;color:#666">
+		<%= f.text_field :data_cheque, :style => 'width: 100px;',:value => @venda.data_cheque %>
+			</td>
+		  </tr>
+			<tr id="pagamentototal" > 
+              <td style="padding:5px;">&nbsp;</td>
+			  <td style="padding:5px;"><b>TOTAL</b></td>
+              <td style="padding:5px;color:#006400;"><%= @venda.total_pagamento %></td>  
+			  <td style="padding:5px;">&nbsp;</td>  
+			</tr>
+		</tbody>	
+    </table>
+	
+
   </td>
   <td width="10%"></td>
 </tr>
@@ -101,6 +163,9 @@
 <script>
 
  $('#venda_data').datepicker({dateFormat : 'dd/mm/yy'});
+$('#venda_data_duplicata').datepicker({dateFormat : 'dd/mm/yy'});
+$('#venda_data_cartao').datepicker({dateFormat : 'dd/mm/yy'});
+$('#venda_data_cheque').datepicker({dateFormat : 'dd/mm/yy'});
 
  $(function() {
 	var id = 0;
@@ -120,10 +185,10 @@
 		
 		var prot = '<tr class="calcula" id="linha'+id+'" >' + 
 		'<input type="hidden" name="venda[lista_produtos]['+id+'][id]" value="'+ui.item.id+'"/>' +
-		'<td style="padding:5px;padding-left:20px;color:#1E90FF;">'+ ui.item.codigo + '</td>' +
-		'<td style="padding:5px;color:#666;">'+ ui.item.descricao + '</td>' +
-		'<td style="padding:5px;color:#666;">'+ ui.item.marca + '</td>' +
-		'<td class="valor_produto" title="'+ ui.item.valor_real + '" style="padding:5px;color:#006400;">'+ ui.item.valor + '</td>'+
+		'<td style="padding-left:20px;color:#1E90FF;">'+ ui.item.codigo + '</td>' +
+		'<td style="color:#666;">'+ ui.item.descricao + '</td>' +
+		'<td style="color:#666;">'+ ui.item.marca + '</td>' +
+		'<td class="valor_produto" title="'+ ui.item.valor_real + '" style="color:#006400;">'+ ui.item.valor + '</td>'+
 		'<td style="padding:5px;color:#006400">' +
 		'<input class="valor_vendido" style="width: 100px;" type="text" name="venda[lista_produtos]['+id+'][valor_vendido]" value="'+ ui.item.valor_real +'"/></td> ' +
 		'<td style="padding:5px;"><%= image_tag("remove.jpg", :id => "removeprod'+id+'", :size => "20x20", :style => "cursor:pointer", :title => "Remover" , :onclick => "removeProduto(this, '+id+','+ui.item.id+')") %></td></tr>';
@@ -158,15 +223,52 @@
 	$("#prod_body").find("#linhatotal").remove();
 
 	linhaTotal = '<tr id="linhatotal" >' + 
-	             '<td style="padding:5px;" colspan="2">&nbsp;</td> ' +
-			     '<td style="padding:5px;"><b>TOTAL</b></td> ' + 
-	             '<td style="padding:5px;color:#006400;">R$ ' + parseDoubleToMoedaPtBR(valor) + '</td> ' +
-	             '<td style="padding:5px;color:#006400;">R$ ' + parseDoubleToMoedaPtBR(valor_vendido) + '</td> ' +
-	             '<td style="padding:5px;">&nbsp;</td> ' +  
+	             '<td  colspan="2">&nbsp;</td> ' +
+			     '<td ><b>TOTAL</b></td> ' + 
+	             '<td style="color:#006400;">R$ ' + parseDoubleToMoedaPtBR(valor) + '</td> ' +
+	             '<td style="color:#006400;">R$ ' + parseDoubleToMoedaPtBR(valor_vendido) + '</td> ' +
+	             '<td >&nbsp;</td> ' +  
 	             '</tr>';
 
 	$("#prod_body").append(linhaTotal);
 	
   }
+
+  function calculaPagamento() {
+	
+		var total_pagamento = 0;
+	    var valor_dinheiro = $("#venda_valor_dinheiro").val();
+	    var valor_duplicata = $("#venda_valor_duplicata").val(); 
+		var valor_cartao = $("#venda_valor_cartao").val();
+	    var valor_cheque = $("#venda_valor_cheque").val();
+	
+		if (valor_dinheiro != "" && valor_dinheiro > 0) {
+			total_pagamento += parseFloat(valor_dinheiro);
+	 	}
+	    
+	    if (valor_duplicata != "" && valor_duplicata > 0) {
+			total_pagamento += parseFloat(valor_duplicata);
+		}
+		
+		if (valor_cheque != "" && valor_cheque > 0) {
+			total_pagamento += parseFloat(valor_cheque);
+	 	}
+	    
+	    if (valor_cartao != "" && valor_cartao > 0) {
+			total_pagamento += parseFloat(valor_cartao);
+		}
+		
+		$("#pag_body").find("#pagamentototal").remove();
+		
+		linha = '<tr id="pagamentototal" > ' + 
+          '<td style="padding:5px;">&nbsp;</td> ' +
+		  '<td style="padding:5px;"><b>TOTAL</b></td> ' +
+          '<td style="padding:5px;color:#006400;">R$ '+ parseDoubleToMoedaPtBR(total_pagamento) + '</td> ' +  
+		  '<td style="padding:5px;">&nbsp;</td> ' +  
+		  '</tr>';
+		
+		$("#pag_body").append(linha);
+		
+	}
 	
 </script>
