--- a/app/views/clientes/show.html.erb
+++ b/app/views/clientes/show.html.erb
@@ -40,22 +40,6 @@
 	
 </td>
 <td>
-	
-	<div id="accordion">
-	    <h3><a href="#">Nome</a></h3>
-	    <div><p>
-		  <b><%= t('cliente.nome')%>:</b>
-		  <%= @cliente.nome if @cliente  %>
-		</p></div>
-	    <h3><a href="#">Data</a></h3>
-	    <div><p>
-		  <b><%= t('cliente.data_cadastro')%>:</b>
-		  <span style="color:#1E90FF"><%= I18n.l(@cliente.created_at, :format => :short) if @cliente.created_at  %></span>
-		</p></div>
-	</div>
-	
-	
-	
 </td>
 
 </tr></table>
@@ -66,8 +50,6 @@
 </div>
 <script>
 
-$( "#accordion" ).accordion({
-			collapsible: true
-		});
+$(".accordion").collapse();
 
 </script
