--- a/app/views/pagamento_vendas/index.html.erb
+++ b/app/views/pagamento_vendas/index.html.erb
@@ -4,9 +4,11 @@
 
 	<table class="zebra-striped">
 	  <tr class="pesquisa">
-				<th><%= t('pagamento_venda.cliente') %>&nbsp;
-					<%= f.select :cliente_id, options_from_collection_for_select(@clientes,:id,:nome, @pagamento_venda.cliente_id),  
-								:include_blank => true %>&nbsp;&nbsp;<%= f.submit t('botao.pesquisar'), :class => "btn primary" %>
+		<th><%= t('pagamento_venda.cliente') %>&nbsp;
+			<%= f.select :cliente_id, options_from_collection_for_select(@clientes,:id,:nome, @pagamento_venda.cliente_id),  
+			:include_blank => true %>&nbsp;&nbsp;<%= t('pagamento_venda.listar') %>&nbsp;
+			<%= f.select :lista, options_for_select([["Todos", ""], ["Pendentes", PagamentoVenda::PENDENTE], ["Pagos", PagamentoVenda::PAGO]], @pagamento_venda.lista) %>&nbsp;&nbsp;
+			<%= f.submit t('botao.pesquisar'), :class => "btn primary" %>
 		</th>
 	 </tr>
 	</table>
@@ -14,14 +16,14 @@
 <% if @pagamento_vendas.size > 0  %>
  <table class="zebra-striped">
   <tr>
-	 <th width="10%"><%= t('pagamento_venda.data')%></th>
-     <th width="15%"><%= t('pagamento_venda.cliente')%></th>
+	 <th width="15%"><%= t('pagamento_venda.data_pagamento')%></th>
+     <th width="20%"><%= t('pagamento_venda.cliente')%></th>
      <th width="15%"><%= t('pagamento_venda.forma_pagamento')%></th>
      <th width="10%"><%= t('pagamento_venda.parcela')%></th>
-     <th width="15%"><%= t('pagamento_venda.data')%></th>
+     <th width="10%"><%= t('pagamento_venda.data')%></th>
      <th width="10%"><%= t('pagamento_venda.valor')%></th>
     <th></th>
-    <th></th>
+	<th></th>
   </tr>
 
  <% @pagamento_vendas.each do |pagamento_venda| %>
@@ -29,11 +31,11 @@
 	<td style="color:#1E90FF"><%= I18n.l(pagamento_venda.data_pagamento_cliente) if pagamento_venda.data_pagamento_cliente %></td>
 	<td style="color:#666"><%= pagamento_venda.venda.cliente.nome if (pagamento_venda.venda && pagamento_venda.venda.cliente)  %></td>
     <td style="color:#666"><%= pagamento_venda.descricao_forma %></td>
-    <td style="color:#666"><%= pagamento_venda.parcela %></td>
+    <td style="color:#666"><%= pagamento_venda.parcela %>ª</td>
 	<td style="color:#1E90FF"><%= I18n.l(pagamento_venda.data) if pagamento_venda.data %></td>
     <td style="color:#006400"><%= number_to_currency(pagamento_venda.valor) if pagamento_venda.valor %></td>        
-	<td><%= link_to t('botao.detalhes'), pagamento_venda %></td>
-   	<td><% if pagamento_venda.data_pagamento_cliente.blank? %><%= link_to t('botao.pagar'), pagamento_venda, confirm: 'Tem certeza que deseja registrar o pagamento ?', method: :delete %><% end %></td>
+   	<td><% if pagamento_venda.data_pagamento_cliente.blank? %><%= link_to t('botao.pagar'), pagamento_venda_path(pagamento_venda,:acao => 'pagar'), confirm: 'Tem certeza que deseja registrar o pagamento ?', method: :delete %><% end %></td>
+	<td><% if !pagamento_venda.data_pagamento_cliente.blank? %><%= link_to t('botao.desfazer'), pagamento_venda_path(pagamento_venda,:acao => 'desfazer'), confirm: 'Tem certeza que deseja desfazer o pagamento ?', method: :delete %><% end %></td>
   </tr>
  <% end %>
  </table>
