--- a/app/views/compras/show.html.erb
+++ b/app/views/compras/show.html.erb
@@ -32,36 +32,101 @@
 	  <b><%= t('compra.sem_retorno')%>:</b>
 	  <span style="color:#006400"><%= number_to_currency(@compra.total_sem_retorno) if @compra.total_sem_retorno %></span>
 	</p>
-	
-	<p>
-	  <b><%= t('compra.previsao_vendas')%>:</b>
-	  <span style="color:#006400"><%= number_to_currency(@compra.total_retorno_produtos) if @compra.total_retorno_produtos %></span>
-	</p>
-	
-	<p>
-	  <b><%= t('compra.total_lucro')%>:</b>
-	  <span style="color:#006400"><%= number_to_currency(@compra.total_lucro) if @compra.total_lucro %></span>
-	</p>
-	
-	<p>
-	  <b><%= t('compra.lucratividade')%>:</b>
-	  <span style="color:#006400"><%= number_to_percentage(@compra.lucratividade) if @compra.lucratividade %></span>
-	</p>
-	
-	<p>
-	  <b><%= t('compra.rentabilidade')%>:</b>
-	  <span style="color:#006400"><%= number_to_percentage(@compra.rentabilidade) if @compra.rentabilidade %></span>
-	</p>
 
-	<p>
-	  <b><%= t('compra.prazo_retorno')%>:</b>
-	  <span style="color:#006400"><%= @compra.prazo_retorno if @compra.prazo_retorno %></span>
-	</p>
-	
 	<p>
 	  <b><%= t('compra.observacao')%>:</b>
 	  <%= @compra.observacao if @compra  %>
 	</p>
+
+<div class="hero-unit-devolucao">
+	<h4>Previsão</h4><br>
+	<p>
+	  <%= t('compra.vendas')%>:
+	  <span style="color:#006400"><%= number_to_currency(@compra.total_retorno_produtos) if @compra.total_retorno_produtos %></span>
+	</p>
+	
+	<p>
+	  <%= t('compra.lucro')%>:
+	  <% if @compra.total_lucro > 0 %>
+	  <span style="color:#006400"><%= number_to_currency(@compra.total_lucro) if @compra.total_lucro %></span>
+	  <% else %> 
+	  <span style="color:red"><%= number_to_currency(@compra.total_lucro) if @compra.total_lucro %></span>
+	  <% end %>
+	</p>
+	
+	<p>
+	  <%= t('compra.lucratividade')%>:
+	 <% if @compra.lucratividade > 0 %>
+	  <span style="color:#006400"><%= number_to_percentage(@compra.lucratividade) if @compra.lucratividade %></span>
+	<% else %>
+	  <span style="color:red"><%= number_to_percentage(@compra.lucratividade) if @compra.lucratividade %></span>
+     <% end %>
+	</p>
+	
+	<p>
+	  <%= t('compra.rentabilidade')%>:
+	 <% if @compra.rentabilidade > 0 %>
+	  <span style="color:#006400"><%= number_to_percentage(@compra.rentabilidade) if @compra.rentabilidade %></span>
+	<% else %>
+	  <span style="color:red"><%= number_to_percentage(@compra.rentabilidade) if @compra.rentabilidade %></span>
+	 <% end %>
+	</p>
+
+	<p>
+	  <%= t('compra.prazo_retorno')%>:
+	 <% if @compra.prazo_retorno > 0 %>
+	  <span style="color:#006400"><%= number_with_delimiter(@compra.prazo_retorno) if @compra.prazo_retorno %> meses</span>
+	<% else %>
+	  <span style="color:red"><%= number_with_delimiter(@compra.prazo_retorno) if @compra.prazo_retorno %> meses</span>
+	 <% end %>	
+	</p>
+</div>
+<br>
+<div class="hero-unit-devolucao">
+	<h4>Real</h4><br>
+	<p>
+	  <%= t('compra.vendas')%>:
+	  <span style="color:#006400"><%= number_to_currency(@compra.total_vendido) if @compra.total_vendido %></span>
+	</p>
+	
+	<p>
+	  <%= t('compra.lucro')%>:
+	  <% if @compra.lucro_real > 0 %>
+	   <span style="color:#006400"><%= number_to_currency(@compra.lucro_real) if @compra.lucro_real %></span>
+	  <% else %>
+		<span style="color:red"><%= number_to_currency(@compra.lucro_real) if @compra.lucro_real %></span>
+	  <% end %>
+	</p>
+	
+	<p>
+	  <%= t('compra.lucratividade')%>:
+	<% if @compra.lucratividade_real > 0 %>
+	  <span style="color:#006400"><%= number_to_percentage(@compra.lucratividade_real) if @compra.lucratividade_real %></span>
+	<% else %>
+	  <span style="color:red"><%= number_to_percentage(@compra.lucratividade_real) if @compra.lucratividade_real %></span>
+	<% end %>
+	</p>
+	
+	<p>
+	  <%= t('compra.rentabilidade')%>:
+	 <% if @compra.rentabilidade_real > 0 %>
+	  <span style="color:#006400"><%= number_to_percentage(@compra.rentabilidade_real) if @compra.rentabilidade_real %></span>
+	<% else %>
+	  <span style="color:red"><%= number_to_percentage(@compra.rentabilidade_real) if @compra.rentabilidade_real %></span>
+	<% end %>
+	</p>
+
+	<p>
+	  <%= t('compra.prazo_retorno')%>:
+	<% if @compra.prazo_retorno_real > 0 %>
+	  <span style="color:#006400"><%= number_with_delimiter(@compra.prazo_retorno_real) if @compra.prazo_retorno_real %> meses</span>
+	<% else %>
+	  <span style="color:red"><%= number_with_delimiter(@compra.prazo_retorno_real) if @compra.prazo_retorno_real %> meses</span>
+	<% end %>
+	
+	</p>
+</div>
+	
   </td>
   <td>
  	<table class="zebra-striped">
