--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,39 @@
 <h2><%= t('home.titulo')%></h2>
 <br>
-<table class="zebra-striped">
- <tbody>	
-   <tr>
-	<td>Seja bem-vindo!</td>
+<table>
+  <tr>
+	<td>
+		<div class="hero-unit-devolucao">
+			<h4>A Pagar</h4><br>
+			<% @pagamento_despesas.each do |pagamento| %>
+				<p>
+				  <span style="color:#666"><%= I18n.l(pagamento.data, :format => :mes) %>:</span>
+				  <span style="color:#006400"><%= number_to_currency(pagamento.valor) %></span>
+				</p>
+		 	<% end %>	
+		<br>
+			<p>
+			  <span style="color:#666"><b>Total:</b></span>
+			  <span style="color:#006400"><b><%= number_to_currency(@total_pagamento_despesa) %></b></span>
+			</p>
+		</div>
+    </td>
+	<td>
+		<div class="hero-unit-devolucao">
+			<h4>A Receber</h4><br>
+			<% @pagamento_vendas.each do |pagamento| %>
+				<p>
+				  <span style="color:#666"><%= I18n.l(pagamento.data, :format => :mes) %>:</span>
+				  <span style="color:#006400"><%= number_to_currency(pagamento.valor) %></span>
+				</p>
+		 	<% end %>	
+		<br>
+			<p>
+			  <span style="color:#666"><b>Total:</b></span>
+			  <span style="color:#006400"><b><%= number_to_currency(@total_pagamento_venda) %></b></span>
+			</p>
+		</div>
+    </td>
+    <td width="60%"></td>
   </tr>
- </tbody>
 </table>
