--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,38 +2,114 @@
 <br>
 <table>
   <tr>
-	<td>
-		<div class="hero-unit-devolucao">
-			<h4>A Pagar</h4><br>
-			<% @pagamento_despesas.each do |pagamento| %>
-				<p>
-				  <span style="color:#666"><%= I18n.l(pagamento.data, :format => :mes) %>:</span>
-				  <span style="color:#006400"><%= number_to_currency(pagamento.valor) %></span>
-				</p>
-		 	<% end %>	
-		<br>
-			<p>
-			  <span style="color:#666"><b>Total:</b></span>
-			  <span style="color:#006400"><b><%= number_to_currency(@total_pagamento_despesa) %></b></span>
-			</p>
-		</div>
+	<td style="border-top:0px solid #ddd;">
+		<table>
+			<tr>
+				<td>
+					<div class="hero-unit-devolucao">
+						<h4>A Pagar</h4><br>
+						<% @pagamento_despesas.each do |pagamento| %>
+							<p>
+							  <span style="color:#666"><%= I18n.l(pagamento.data, :format => :mes) %>:</span>
+							  <span style="color:#006400"><%= number_to_currency(pagamento.valor) %></span>
+							</p>
+					 	<% end %>	
+					<br>
+						<p>
+						  <span style="color:#666"><b>Total:</b></span>
+						  <span style="color:#006400"><b><%= number_to_currency(@total_pagamento_despesa) %></b></span>
+						</p>
+					</div>
+	    	    </td>
+		      <td>
+					<div class="hero-unit-devolucao">
+						<h4>A Receber</h4><br>
+						<% @pagamento_vendas.each do |pagamento| %>
+							<p>
+							  <span style="color:#666"><%= I18n.l(pagamento.data, :format => :mes) %>:</span>
+							  <span style="color:#006400"><%= number_to_currency(pagamento.valor) %></span>
+							</p>
+					 	<% end %>	
+					<br>
+						<p>
+						  <span style="color:#666"><b>Total:</b></span>
+						  <span style="color:#006400"><b><%= number_to_currency(@total_pagamento_venda) %></b></span>
+						</p>
+					</div>
+			   </td>	
+			   <td>
+					<div class="hero-unit-devolucao">
+						<h4>Formas de Pagamento</h4><br>
+						<% @formas_pagamento.each do |forma| %>
+							<p>
+							  <span style="color:#666"><%= forma.descricao_forma %>:</span>
+							  <span style="color:#006400"><%= number_to_currency(forma.valor) %></span>
+							  <span style="color:#1E90FF">&nbsp;<%= number_to_percentage(((forma.valor / @total_formas) * 100).round(1)) %></span>
+							</p>
+					 	<% end %>	
+					</div><br>
+					<div class="hero-unit-devolucao">
+						<h4>Resumo de Produtos</h4><br>
+						<p>
+						  <span style="color:#666">Estoque:</span>
+						  <span style="color:#666"><%= @qtde_produtos[0] %></span>
+						</p>
+						<p>
+						  <span style="color:#666">Vendidos:</span>
+						  <span style="color:#666"><%= @qtde_produtos[1] %></span>
+						</p>
+					</div>	
+			   </td>
+			   <td>
+				<div class="hero-unit-devolucao">
+					<h4>10 Melhores Clientes</h4><br>
+					<% @relacao_clientes.each do |cliente| %>
+						<p>
+						  <span style="color:#666"><%= cliente.nome %>:</span>
+						  <span style="color:#006400"><%= number_to_currency(cliente.valor) %></span>
+						</p>
+				 	<% end %>	
+				</div>
+			   </td>
+			</tr>
+		<table>
     </td>
-	<td>
-		<div class="hero-unit-devolucao">
-			<h4>A Receber</h4><br>
-			<% @pagamento_vendas.each do |pagamento| %>
-				<p>
-				  <span style="color:#666"><%= I18n.l(pagamento.data, :format => :mes) %>:</span>
-				  <span style="color:#006400"><%= number_to_currency(pagamento.valor) %></span>
-				</p>
-		 	<% end %>	
-		<br>
-			<p>
-			  <span style="color:#666"><b>Total:</b></span>
-			  <span style="color:#006400"><b><%= number_to_currency(@total_pagamento_venda) %></b></span>
-			</p>
-		</div>
-    </td>
-    <td width="60%"></td>
+  </tr>
+  <tr>
+	<td style="border-top:0px solid #ddd;">
+		<table>
+			<tr>
+				<td style="border-top:0px solid #ddd;">
+				<table class="zebra-striped">
+			       <tr>
+					<th width="3%">#</th>
+					<th width="20%">Marca</th>
+			        <th width="11%"><%= t('qtde_estoque')%></th>
+					<th width="11%"><%= t('qtde_vendido')%></th>
+					<th width="11%"><%= t('percentual_qtde')%></th>
+					<th width="11%"><%= t('total_estoque')%></th>
+					<th width="11%"><%= t('total_vendido')%></th>
+					<th width="11%"><%= t('total_comprado')%></th>
+					<th width="11%"><%= t('percentual_valor')%></th>
+					
+				</tr>
+				 <% @relacao_marcas.each_with_index do |marca, cont| %>
+					<tr>
+						<td style="color:#1E90FF"><%= cont + 1 %></td>
+						<td style="color:#666"><%= marca.descricao %></td>
+						<td style="color:#666"><%= marca.qtde_estoque %></td>
+						<td style="color:#666"><%= marca.qtde_vendido %></td>
+						<td style="color:#1E90FF"><%= number_to_percentage(marca.percentual) %></td>
+						<td style="color:#006400"><%= number_to_currency(marca.soma_estoque) if marca.soma_estoque %></td>
+						<td style="color:#006400"><%= number_to_currency(marca.soma_vendido) if marca.soma_vendido %></td>
+						<td style="color:#006400"><%= number_to_currency(marca.total_comprado) if marca.total_comprado %></td>
+						<td style="color:#1E90FF"><%= number_to_percentage(((marca.soma_vendido / marca.total_comprado) * 100).round(1))  %></td>
+					</tr>
+				 <% end %>	
+			    </table>
+			</td> 
+	        </tr>			
+	   </table>
+	</td>
   </tr>
 </table>
