--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -116,7 +116,7 @@
 						<% @relacao_pagamentos.each do |cliente| %>
 							<p>
 							  <span style="color:#666"><%= cliente.nome %>:</span>
-							  <% if (cliente.data > Date.today) %>
+							  <% if (cliente.data >= Date.today) %>
 							  		<span style="color:#1E90FF">&nbsp; <%= I18n.l(cliente.data) %></span>  
 							  <% else %>		
 							  		<span style="color:red">&nbsp; <%= I18n.l(cliente.data) %></span>  
@@ -147,7 +147,6 @@
 					<th width="11%"><%= t('total_vendido')%></th>
 					<th width="11%"><%= t('total_comprado')%></th>
 					<th width="11%"><%= t('percentual_valor')%></th>
-					
 				</tr>
 				 <% @relacao_marcas.each_with_index do |marca, cont| %>
 					<tr>
@@ -159,7 +158,7 @@
 						<td style="color:#006400"><%= number_to_currency(marca.soma_estoque) if marca.soma_estoque %></td>
 						<td style="color:#006400"><%= number_to_currency(marca.soma_vendido) if marca.soma_vendido %></td>
 						<td style="color:#006400"><%= number_to_currency(marca.total_comprado) if marca.total_comprado %></td>
-						<td style="color:#1E90FF"><%= number_to_percentage(((marca.soma_vendido / marca.total_comprado) * 100).round(1))  %></td>
+						<td style="color:#1E90FF"><%= number_to_percentage(marca.percentual_valor)  %></td>
 					</tr>
 				 <% end %>	
 			    </table>
