--- a/app/views/pagamento_vendas/index.html.erb
+++ b/app/views/pagamento_vendas/index.html.erb
@@ -17,12 +17,14 @@
 <% if @pagamento_vendas.size > 0  %>
  <table class="zebra-striped">
   <tr>
-	 <th width="15%"><%= t('pagamento_venda.data_pagamento')%></th>
-     <th width="20%"><%= t('pagamento_venda.cliente')%></th>
-     <th width="15%"><%= t('pagamento_venda.forma_pagamento')%></th>
+	 <th width="12%"><%= t('pagamento_venda.data_pagamento')%></th>
+     <th width="15%"><%= t('pagamento_venda.cliente')%></th>
+     <th width="12%"><%= t('pagamento_venda.forma_pagamento')%></th>
      <th width="10%"><%= t('pagamento_venda.parcela')%></th>
-     <th width="10%"><%= t('pagamento_venda.data')%></th>
-     <th width="10%"><%= t('pagamento_venda.valor')%></th>
+     <th width="12%"><%= t('pagamento_venda.data')%></th>
+     <th width="8%"><%= t('pagamento_venda.valor')%></th>
+     <th width="8%"><%= t('pagamento_venda.recalculado')%></th>
+     <th width="8%"><%= t('pagamento_venda.valor_pago')%></th>
     <th></th>
 	<th></th>
   </tr>
@@ -35,7 +37,10 @@
     <td style="color:#666"><%= pagamento_venda.parcela %>ª</td>
 	<td style="color:#1E90FF"><%= I18n.l(pagamento_venda.data) if pagamento_venda.data %></td>
     <td style="color:#006400"><%= number_to_currency(pagamento_venda.valor) if pagamento_venda.valor %></td>        
-   	<td><% if pagamento_venda.data_pagamento_cliente.blank? %><%= link_to t('botao.pagar'), pagamento_venda_path(pagamento_venda,:acao => 'pagar'), confirm: 'Tem certeza que deseja registrar o pagamento ?', method: :delete %><% end %></td>
+    <td style="color:#006400"><%= number_to_currency(pagamento_venda.recalculo) if pagamento_venda.recalculo %></td>
+    <td style="color:#006400"><%= number_to_currency(pagamento_venda.valor_pago) if pagamento_venda.valor_pago %></td>
+   	<td><% if pagamento_venda.data_pagamento_cliente.blank? %>
+   		<%= link_to t('botao.pagar'), edit_pagamento_venda_path(pagamento_venda)%><% end %></td>
 	<td><% if !pagamento_venda.data_pagamento_cliente.blank? %><%= link_to t('botao.desfazer'), pagamento_venda_path(pagamento_venda,:acao => 'desfazer'), confirm: 'Tem certeza que deseja desfazer o pagamento ?', method: :delete %><% end %></td>
   </tr>
  <% end %>
@@ -44,6 +49,3 @@
 	    <%= will_paginate @pagamento_vendas, :container => false, :next_label => 'Próximo', :previous_label => 'Anterior' %>
 	</div>
 <% end %>
-
-<br />
-
