--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,64 @@
-<h2>Sign up</h2>
+<div class="row">
+  <div class="span6">
 
+<h2>Cadastro de Usuário</h2>
+<br>
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+  <% if @user.errors.any? %>
+          <fieldset id="erros">
+           <div class="ui-state-error ui-corner-all" style="padding: 5px;">
+             <h4><%= t('errors.messages.titulo') %>:</h4>
+             <br>
+             <ul>
+               <% @user.errors.full_messages.each do |msg| %>
+                 <li><%= msg %></li>
+               <% end %>
+             </ul>
+           </div>
+          </fieldset>
+        <% end %> 
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
+  <div class="clearfix">
+    <%= f.label :name, :class => 'control-label' %>
+    <div class="input">
+    <%= f.text_field :name %>
+    </div>
+  </div>
 
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
+  <div class="clearfix">
+      <%= f.label :username, :class => 'control-label' %>
+    <div class="input">
+      <%= f.text_field :username %>
+    </div>
+  </div>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+  <div class="clearfix">
+    <%= f.label :email, :class => 'control-label' %>
+    <div class="input">
+      <%= f.email_field :email %>
+    </div>
+  </div>
 
-  <div><%= f.submit "Sign up" %></div>
+  <div class="clearfix">
+    <%= f.label :password, :class => 'control-label' %>
+    <div class="input">
+      <%= f.password_field :password %>
+    </div>
+  </div>
+
+  <div class="clearfix">
+    <%= f.label :password_confirmation, :class => 'control-label' %>
+    <div class="input">
+      <%= f.password_field :password_confirmation, :style => 'marging-left: 20px' %>
+     </div> 
+  </div>
+
+  <br>
+          <div class="form-actions"><%= f.submit "Registrar", :class => 'btn primary' %>
+<a href="<%= new_session_path(resource_name) %>"><button class="btn" name="btnback"><%= t('botao.cancelar')%></button></a>
+          </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+	</div>
+</div>
